# substrate-light-client

./: .gitignore  Cargo.toml  Makefile  README.md  test-tool.sh
src/: babe.rs  block_import_wrapper.rs  block_processor.rs  client.rs  common.rs  contract.rs  db.rs  dummy_executor.rs  dummy_objs.rs  genesis.rs  grandpa.rs  grandpa_block_import.rs  import_queue.rs  justification.rs  lib.rs  light_state.rs  msg.rs  runtime.rs  storage.rs  types.rs  verifier.rs
src/common/: utils.rs
src/common/traits/: header_metadata.rs  storage.rs  verifier.rs
src/common/types/: blockchain_error.rs  client_status.rs  light_authority_set.rs  next_change_in_authority.rs
src/contract/: mod.rs  msg.rs  state.rs  types.rs
substrate_client/: test-tool.sh
substrate_client/src/: block_import_wrapper.rs  client.rs  lib.rs  runtime.rs  storage.rs
test-helpers/: Cargo.toml  README.md
