[package]
name = "substrate_ibc_client"
version = "0.1.0"
authors = ["Chorus One"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvdb = "0.5.0"
sp-runtime = "2.0.0-alpha.6"
parity-scale-codec = "1.3.0"
parity-scale-codec-derive = "1.2.0"
parity-util-mem = "0.6.1"
parking_lot = "0.10.2"
# Just to build on wasm
clear_on_drop = { version = "0.2.3", features = ["no_cc"] }
