[package]
name = "substrate_client"
version = "0.1.0"
authors = ["Chorus One"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvdb = "0.5.0"
sp-runtime = "2.0.0-alpha.6"
parity-scale-codec = "1.3.0"
parity-scale-codec-derive = "1.2.0"
parity-util-mem = "0.6.1"
parking_lot = "0.10.2"
sc-client = "0.8.0-alpha.6"
sc-executor = "0.8.0-alpha.6"
sp-consensus = "0.8.0-alpha.6"
sp-blockchain = "2.0.0-alpha.6"
sp-externalities = "0.8.0-alpha.6"
sp-api = "2.0.0-alpha.6"
sp-state-machine = "0.8.0-alpha.6"
sp-version = "2.0.0-alpha.6"
sc-client-api = "2.0.0-alpha.6"
sc-finality-grandpa = "0.8.0-alpha.6"
sp-core = "2.0.0-alpha.6"
sp-storage = "2.0.0-alpha.6"
sp-finality-grandpa = "2.0.0-alpha.6"

# Just to build on wasm
clear_on_drop = { version = "0.2.3", features = ["no_cc"] }

[dev-dependencies]
rand = "0.7.3"
finality-grandpa = "0.11.2"
ed25519-dalek = "1.0.0-pre.3"
sp-keyring = "2.0.0-alpha.6"